fix inspection result